<resources>
    <!-- ENGLISH STRINGS -->
    <string name="app_name">Bluetooth Autoplay Music</string>
    <string name="about_menu">About</string>
    <string name="no_BT_found">No Bluetooth Device found</string>
    <string name="settings_menu">Options</string>
    <string name="link_menu">Rate Me</string>

    <string name="put_phone_in_priority_mode">Do Not Disturb ON</string>
    <string name="set_media_volume_to_max">Set Media Volume to MAX</string>
    <string name="launch_music_player">Launch Music Player</string>
    <string name="dismiss_keyguard">Dismiss KeyGuard</string>
    <string name="keep_screen_on">Keep Screen ON</string>
    <string name="launch_maps">Launch Maps</string>
    <string name="bluetooth_devices">Bluetooth Devices</string>
    <string name="music_players">Music Players</string>
    <string name="on_connect">On Connect</string>
    <string name="option_play_music">PLAY music</string>
    <string name="option_play_music_caption">Play music when connected to bluetooth</string>
    <string name="option_power_required">POWER required</string>
    <string name="option_power_required_caption">Will NOT launch unless phone is charging</string>
    <string name="option_go_home">Go HOME</string>
    <string name="option_go_home_caption">Go to homescreen on device disconnect</string>
    <string name="option_call_completed">CALL completed</string>
    <string name="option_call_completed_caption">On a call, Will NOT launch until call is over</string>
    <string name="option_auto_brightness">Auto BRIGHTNESS</string>
    <string name="option_auto_brightness_caption">Set \'Keep Screen ON\' brightness dim/bright using sunrise/sunset times on connect</string>
    <string name="option_manual_brightness">Manual Brightness Times</string>
    <string name="bright_time_button_text">Bright Time</string>
    <string name="dim_time_button_text">Dim Time</string>
    <string name="autoplay_only">Autoplay Only</string>
    <string name="volume_text">Volume</string>
    <string name="volume_caption">Volume set here ONLY affects autoplay devices.</string>
    <string name="devices_text">Devices</string>
    <string name="device_text_caption">For headphones or a speaker that you just want to play music when connected</string>
    <string name="done_button_text">Done</string>
    <string name="option_set_max_media_volume">Set MAX media volume</string>
    <string name="option_set_max_volume_caption">Set the level for MAX Media Volume</string>
    <string name="home_menu_title">Home</string>
    <string name="options_menu_title">Options</string>
    <string name="maps_menu_text">Maps</string>
    <string name="set_autoplay_only_devices_text">Set Autoplay ONLY Devices</string>
    <string name="wifi_off_caption">Choose which Bluetooth devices turn Wifi OFF when connected and turn Wifi back ON when disconnected</string>
    <string name="wifi_off">Wifi OFF</string>
    <string name="close_waze">Close Waze</string>
    <string name="the_map_app_to_launch_on_bluetooth_connect">The map app to launch on bluetooth connect</string>
    <string name="close_waze_when_bluetooth_disconnects">Close Waze when Bluetooth Disconnects</string>
    <string name="map_options">Map Options</string>
    <string name="map_app_choice">Map app CHOICE</string>
    <string name="show_notification">SHOW Notification</string>
    <string name="show_notification_explanation">Show a notification when Bluetooth connects.</string>
    <string name="use_times_to_launch">Use TIMES to Launch</string>
    <string name="use_times_to_launch_desc">Set time spans for Maps/Waze to Launch. Will only launch in between start and end times.</string>
    <string name="home_directions_label">HOME Directions Time Span</string>
    <string name="work_directions_label">WORK Directions Time Span</string>
    <string name="morning_time_span_label">Morning Time Span</string>
    <string name="evening_time_span_label">Evening Time Span</string>
    <string name="launch_waze_directions_description">Launch Waze with Home/Work directions. Uses Home/Work Time spans that can be set below</string>
    <string name="launch_directions_label">Launch with DIRECTIONS</string>
    <string name="wifi_use_time_spans_caption_morning_evening">Turn WIFI OFF when Bluetooth Connects during the MORNING time span and turn WIFI ON when Bluetooth Disconnects during EVENING time span</string>
    <string name="wifi_use_time_spans_caption_work_home">Turn WIFI OFF when Bluetooth Connects during the WORK time span and turn WIFI ON when Bluetooth Disconnects during HOME time span</string>
    <string name="restore_the_original_volume_on_disconnect">Restore the original volume on disconnect, otherwise Android will handle it</string>
    <string name="driving_mode">Driving Mode</string>
    <string name="driving_mode_description">Will launch Google Maps in Driving Mode</string>
    <string name="priority_mode_explained">If Do NOT Disturb is ON put phone in Priority Mode instead of Silent Mode</string>
    <string name="use_priority_mode">Use Priority Mode</string>
    <string name="enter_address_here">Put the address of the location you would like to launch in Maps/Waze here</string>
    <string name="location_address">Location Address</string>
    <string name="enter_favorite_from_waze">Enter the name of a favorite from Waze here</string>
    <string name="waze_favorite_name">Favorite Name</string>
    <string name="listening_if_the_phones_BT_off">Listening if the Phone\'s Bluetooth is turned OFF</string>
    <string name="initializing">Initializing…</string>
    <string name="disconnect_message">Putting stuff back :)</string>
    <string name="connect_message">Getting stuff ready :D</string>
    <string name="connect_to_power_msg">Connect to power to launch</string>
    <string name="wakelock_messge">Keeping Screen ON</string>
    <string name="no_bluetooth_device">No Bluetooth Device found</string>
    <string name="click_to_launch">Click to launch</string>
    <string name="bluetooth_device_connected">Bluetooth device connected</string>
    <string name="launch_bluetooth_autoplay">Launch Bluetooth Autoplay Music</string>
    <string name="choose_what_days_you_would_like_maps_waze_to_launch">Choose what days you would like Maps/Waze to launch</string>
    <string name="days_to_launch">DAYS to launch</string>
    <string name="set_devices_to_turn_wifi_off">Set Devices to Turn Wifi OFF</string>
    <string name="wifi_off_use_time_spans">Wifi OFF Use Time Spans</string>
    <string name="turn_wifi_off">Turn Wifi Off</string>
    <string name="custom_time_span">CUSTOM Time Span</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="custom">Custom</string>
    <string name="work">Work</string>
    <string name="home">Home</string>
    <string name="require_a2dp">Require A2DP</string>
    <string name="wifi_turned_on">Wifi turned ON</string>
    <string name="wifi_turned_off">Wifi turned OFF</string>
    <string name="no_music_players_msg">No music players found</string>
    <string name="unable_to_launch">Unable to launch</string>
    <string name="unable_to_launch_maps">Unable to launch MAPS</string>
    <string name="unable_to_launch_waze">Unable to launch WAZE</string>
    <string name="unable_to_launch_media_player">Unable to launch Media Player</string>
    <string name="continue_btn_text">Continue</string>
    <string name="required_permissions">Required Permissions</string>
    <string name="app_usage_stats">App usage stats</string>
    <string name="notification_access">Notification Access</string>
    <string name="brief_permission_explain">The following permissions are now required for this app to work properly</string>
    <string name="notification_perm_explain">The NOTIFICATION PERMISSIONS are required for this app to get the media token for music playback of other apps.</string>
    <string name="new_permissions_required">New Permissions Required. Tap to launch</string>
    <string name="notification_listener">Notification Listener</string>
    <string name="optional_permissions">Optional Permissions</string>
    <string name="allow_use_of_firebase_analytics">Allow use of Firebase Analytics</string>
    <string name="missing_required_permissions_msg">Missing required permissions! Bluetooth Autoplay Music</string>
</resources>
