<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">
    <TextView
        android:id="@+id/evening_timespan_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingTop="20dp"
        android:text="@string/evening_time_span_label"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="12dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/evening_start_time_displayed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="4dp"
                android:text="4:00 PM"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp" />
            <Button
                android:id="@+id/evening_start_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/on_state"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/start"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/evening_end_time_displayed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="4dp"
                android:text="7:00 PM"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp" />
            <Button
                android:id="@+id/evening_end_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/on_state"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/end"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>